--- a/styles.css
+++ b/styles.css
@@ -78,13 +78,29 @@ input {
     color: white;
     font-family: 'Poppins', sans-serif;
     transition-duration: 0.2s;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .boton-de-ataque:hover {
     background-color: #456a9e;
     color: white;
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.2), 0 17px 50px 0 rgba(0,0,0,0.16);
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.2), 0 17px 50px 0 rgba(0, 0, 0, 0.16);
+}
 
+#mensajes {
+    width: 280px;
+    background: #eeee;
+    padding: 20px;
+    margin-top: 20px;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+#boton-reiniciar {
+    border: transparent;
+    color: #11468f;
+    font-family: 'Poppins', sans-serif;
 
 }
