--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ input:checked+label {
     padding: 10px;
     box-sizing: border-box;
     border-color: transparent;
-    width: 100px;
+    width: 80px;
     color: white;
     font-family: 'Poppins', sans-serif;
     transition-duration: 0.2s;
@@ -131,6 +131,15 @@ input:checked+label {
     align-items: center;
 }
 
+#verMapa{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#mapa{
+    border: 2px solid #5C7AEA;
+}
 
 @media (max-width: 360px) {
 
